# Leonne

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
Classical Algorithms/: README.md
Classical Algorithms/Blockchain Simulation/: README.md  blockchainNetworkAnalyzer.py  blockchainVisualizer.py
Classical Algorithms/Community Optimization/: README.md  networkCommunities.py  networkGenesis.py  networkStatistics.py  networkVisualizer.py  topologicalNetworkVisualizer.py
Classical Algorithms/Consensus Iterations/: README.md  consensus_network.py  consensus_node.py  consensus_visualizer.py  dcn_improved_visualizations.py  requirements.txt
Classical Algorithms/Generalized Permutations/: README.md  generalizedPermutations.py  permutation_visualizer.py  simple_animation.py  visualization.py
Classical Algorithms/Network Graph Generator/: README.md  graphGenerator.py  networkVisualizer.py
Classical Algorithms/Trust Partitioning/: README.md  advanced_topological_analysis.py  topologicalPartitioner.py  topological_concepts.py  trustPartitioner.py  visualizeTopology.py  visualize_topology_improved.py
Documentation/: README.md
Extension/: README.md
Extension/Excess/: DCN.txt  Overleaf [DCN Blockchain].txt  Overleaf [Long].txt  history.py
Quantum Algorithms/: README.md
Quantum Algorithms/Blockchain Simulation/: README.md  __init__.py  quantumBlockchainAnalysis.py  quantumBlockchainVisualizer.py
Quantum Algorithms/Community Optimization/: README.md  __init__.py  quantumClassicalComparison.py  quantumNetworkCommunities.py  quantumNetworkStatistics.py
Quantum Algorithms/Consensus Iterations/: README.md  __init__.py  quantum_consensus_network.py  quantum_consensus_node.py  quantum_consensus_visualizer.py  (+1 more)
Visualizer/: README.md  classical_hub.py  quantum_hub.py  quantum_hub_test.py  quantum_visualizer_cli.py  visualizer_cli.py
tests/: __init__.py  conftest.py  test_graphGenerator.py  test_history.py  test_quantumTrust.py  test_trustPartitioner.py
(+19 files in other folders)
